<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="155dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="app.miandrusic.ivan.com.consultorstock.ConsultarActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/items"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="103dp"
            android:layout_height="121dp"
            android:id="@+id/imageView"
            android:src="@drawable/manzan3" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="111dp"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:layout_weight="1.22">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/articulo"
                android:id="@+id/txtArticulo"
                android:textSize="10sp"/>

            <Space
                android:layout_width="180dp"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:id="@+id/txtMarca"
                android:textSize="10sp"/>

            <Space
                android:layout_width="163dp"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_de_compra"
                android:id="@+id/txtPrecioCompra"
                android:textSize="10sp"/>

            <Space
                android:layout_width="159dp"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_para_la_venta"
                android:id="@+id/txtPrecioVenta"
                android:textSize="10sp"
                android:textIsSelectable="false" />

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbProd" />

    </LinearLayout>



</android.support.v7.widget.CardView>
